syntax = "proto3";

// 命 令 号: 1002
// 命令名称: led_belt_fixed_expressions_set
// 命令描述: 灯带模块固定表情控制
// 文件名称: d1ac1002_led_belt_fix_exp_set.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbLedBeltFixedExpressionsSet";

message LedBeltFixedExpressionsSetRequest {
  // ATTR: REQUSET
  uint32 expressions_type = 1; //表情种类
  uint32 time = 2; //表情显示次数
  uint32 rgbc = 3; //表情rgbc值
  uint32 port = 4;
}

message LedBeltFixedExpressionsSetResponse {

}
